Partially fix mobile header on small screens

--- a/asset/css/screen.css
+++ b/asset/css/screen.css
@@ -203,6 +203,7 @@ h2 code, h3 code, h4 code, h5 code, h6 code {
 #logo-container {
     flex: 0 0 auto;
     margin-right: 0 !important;
+    max-width: none !important;
 }
 
 .site-wrapper {
@@ -388,7 +389,7 @@ h2 code, h3 code, h4 code, h5 code, h6 code {
     text-align: right;
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 960px) {
     .cols:not(.cols-no-wrap) {
         display: block;
     }
@@ -839,16 +840,19 @@ a.menu-item:hover {
     }
 
     #top {
-        margin: 0 16px;
+        margin: 0 auto;
+        max-width: calc(100% - 64px);
     }
 
     .site-wrapper {
-        padding: 0 32px;
+        padding: 0 16px;
     }
 
     .content {
         padding-left: 0;
         padding-right: 0;
+        margin-left: 16px;
+        margin-right: 16px;
     }
 
     #menu-switch {
@@ -974,6 +978,12 @@ a.menu-item:hover {
     .sidebar-menu li:last-child {
         border-bottom-left-radius: 4px;
         border-bottom-right-radius: 4px;
+    }
+
+    #footer {
+        padding-left: 48px;
+        padding-right: 48px;
+        padding-bottom: 0;
     }
 }
 
